Fixed: wflow-consoleweb - Information Tiles - Chart is not properly align with its container. @8.1-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/userview_v5.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview_v5.css
@@ -1321,6 +1321,10 @@ strong {
     padding: 1.25rem
 }
 
+div.InformationTileComponent .card-body {
+    padding: 2rem;
+}
+
 .card-title {
     margin-bottom: .75rem
 }
@@ -5537,11 +5541,22 @@ a {
     padding-right: 0;
     box-sizing: border-box;
 }
+@media (max-width: 767px) {
+    .container-fluid.mobile-stack-columns .col{
+        flex: 0 0 100% !important;
+        max-width: 100% !important;
+    }
+}
 .InformationTileComponent .acSparkline-initialized,
 .InformationTileComponent a:not(.stretched-link),
-.InformationTileComponent button{
+.InformationTileComponent button, .InformationTileComponent .card-footer:has(a){
     position: relative;
     z-index: 20;
+}
+div.InformationTileComponent {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .accordion {
     margin-bottom: 10px;
