--- a/wflow-consoleweb/src/main/webapp/xadmin/css/custom.css
+++ b/wflow-consoleweb/src/main/webapp/xadmin/css/custom.css
@@ -1306,6 +1306,10 @@
     padding: 1.25rem
 }
 
+div.InformationTileComponent .card-body {
+    padding: 2rem;
+}
+
 .card-title {
     margin-bottom: .75rem
 }
@@ -5797,7 +5801,7 @@ footer {
 }
 .InformationTileComponent .acSparkline-initialized,
 .InformationTileComponent a:not(.stretched-link),
-.InformationTileComponent button{
+.InformationTileComponent button, .InformationTileComponent .card-footer:has(a){
     position: relative;
     z-index: 20;
 }
